# Porting-PyTorch-to-LibTorch-Iris-Neural-Network-Implementation

./: .gitignore  README.md  iris_pytorch.cpp  nn_pytorch.py  print(22).py
C++/: CMakeLists.txt  main.cpp
Python/: iris_pytorch_modified.py  modification_explanation.txt
